[metadata]
# replace with your username:
name = plateypus 
version = 0.1.3
author = Sooraj Achar 
author_email = acharsr@nih.gov
description = Processes and plots high throughput cytometry experiments through a GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soorajachar/plateypus
project_urls =
    Bug Tracker = https://github.com/soorajachar/plateypus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)    
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X    
    Intended Audience :: Science/Research

[options]
package_dir =
    = plateypus 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = plateypus
